# mobile-robotics-2d

./: README.md
my_rb5_ros/: README.md
my_rb5_ros/april_detection/launch/: april_detection_cam_main.launch  run_assignment_2.launch
my_rb5_ros/april_detection/src/: april_detection_node.cpp
my_rb5_ros/rb5_control/: CMakeLists.txt  package.xml
my_rb5_ros/rb5_control/launch/: run_assignment_one.launch
my_rb5_ros/rb5_control/src/: cmd_vel_to_mpi.py  mpi_control.py  mpi_control_cmd.py
my_rb5_ros/rb5_mine_sweeper/: CMakeLists.txt  package.xml
my_rb5_ros/rb5_mine_sweeper/launch/: run_assignment_5.launch
my_rb5_ros/rb5_mine_sweeper/src/: hw5_log.json  loc_error.json  main.py  pid_controller.py  planner.py  representation.py
my_rb5_ros/rb5_slam/: CMakeLists.txt  package.xml
my_rb5_ros/rb5_slam/launch/: run_assignment_3.launch
my_rb5_ros/rb5_slam/src/: kalman_filter.py  pid_controller.py  slam.py
my_rb5_ros/rb5_vision/launch/: rb_camera_main_ocv.launch
my_rb5_ros/rb5_vision/rviz/: rb5.rviz  rb5_3.rviz
